--- a/src/models/my_second_model.yml
+++ b/src/models/my_second_model.yml
@@ -2,7 +2,7 @@ version: 2
 
 models:
   - name: my_second_model
-    description: A tiny model that references another model.
+    description: A tiny model that references another model
     config:
       tags:
         - example
